--- a/ollama/compose.yaml
+++ b/ollama/compose.yaml
@@ -1,7 +1,29 @@
-version: "3"
-
 services:
   ollama:
+    container_name: ollama
+    image: ollama/ollama
+    volumes:
+      - ./.ollama:/root/.ollama
+    network_mode: host
+    ports:
+      - 11434:11434
+    environment:
+      - OLLAMA_DEBUG=1
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities:
+                - gpu
+
+  open-webui:
+    network_mode: host
+    # ports:
+    #     - 3000:8080
+    environment:
+      - OLLAMA_BASE_URL=http://127.0.0.1:11434
     deploy:
       resources:
         reservations:
@@ -11,26 +33,16 @@ services:
               capabilities:
                 - gpu
     volumes:
-      - ./.ollama:/root/.ollama
-    ports:
-      - 11434:11434
-    container_name: ollama
-    image: ollama/ollama
-
-  open-webui:
-    ports:
-      - 3000:8080
-    extra_hosts:
-      - host.docker.internal:host-gateway
-    volumes:
+      # - .ollama:/root/.ollama
       - open-webui:/app/backend/data
     container_name: open-webui
-    restart: always
+    # restart: always
     image: ghcr.io/open-webui/open-webui:main
+
 volumes:
-  # ollama:
-  #   external: true
-  #   name: ollama
-  open-webui:
-    external: true
-    name: open-webui
+    ollama:
+        external: true
+        name: ollama
+    open-webui:
+        external: true
+        name: open-webui
